--- a/src/styles/PageTitle.module.css
+++ b/src/styles/PageTitle.module.css
@@ -11,4 +11,16 @@
   color: white;
   border: 7px solid white;
   border-radius: 5px;
+  opacity: 0;
+}
+
+.h1.fade-in{
+  opacity: 1;
+  transition: opacity 3s ease-in-out;
+
+}
+
+.h1.fade-out{
+  opacity: 0;
+  transition: opacity 1s ease-out-in;
 }
