--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,55 +1,112 @@
 .footer {
-  background: #000;
-  padding: 30px 0px;
-  font-family: "Play", sans-serif;
-  text-align: center;
-}
-
-.footer .row {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100%;
-  margin: 1% 0%;
-  padding: 0.6% 0%;
-  color: gray;
-  font-size: 0.8em;
+  background-color: #3586FF;
+  min-height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.footer .row a {
-  text-decoration: none;
-  color: gray;
-  transition: 0.5s;
-  text-transform: uppercase;
-  padding: 20px;
+.socialIcon,
+.menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+  list-style: none;
 }
 
-.footer .row a:hover {
+.socialIconItem {
+  list-style: none;
+}
+
+.socialIcon a {
+  font-size: 2rem;
   color: #fff;
-}
-
-.footer .row ul {
-  width: 100%;
-}
-
-.footer .row ul li {
+  margin: 0 10px;
   display: inline-block;
-  margin: 0px 30px;
+  transition: 0.5s;
 }
 
-.footer .row a i {
-  font-size: 2em;
-  margin: 0% 1%;
+.socialIcon a:hover {
+  transform: translateY(-10px);
 }
 
-@media (max-width: 720px) {
-  .footer {
-    text-align: left;
-    padding: 5%;
+.menu a {
+  font-size: 1.2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  text-decoration: none;
+  opacity: 0.75;
+  font-weight: 300;
+}
+
+.menu a:hover {
+  opacity: 1;
+}
+
+.wave {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("https://i.ibb.co/wQZVxxk/wave.png");
+  background-size: 1000px 100px;
+}
+
+.wave1 {
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animateWaves 4s linear infinite;
+}
+
+.wave2 {
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animate 4s linear infinite !important;
+}
+
+.wave3 {
+  z-index: 1000;
+  opacity: 0.2;
+  bottom: 15px;
+  animation: animateWaves 3s linear infinite;
+}
+
+.wave4 {
+  z-index: 999;
+  opacity: 0.7;
+  bottom: 20px;
+  animation: animate 3s linear infinite;
+}
+
+@keyframes animateWaves {
+  0% {
+    background-position-x: 1000px;
   }
-  .footer .row ul li {
-    display: block;
-    margin: 10px 0px;
-    text-align: left;
+
+  100% {
+    background-position-x: 0px;
   }
-  .footer .row a i {
-    margin: 0% 3%;
+}
+
+@keyframes animate {
+  0% {
+    background-position-x: -1000px;
+  }
+
+  100% {
+    background-position-x: 0px;
   }
 }
