--- a/src/styles/HamburgerMenu.module.css
+++ b/src/styles/HamburgerMenu.module.css
@@ -34,11 +34,11 @@
 }
 
 .nav a:hover {
-  background: rgb(22, 132, 151);
+  background: lightslategray;
 }
 
 .nav a:active {
-  background: rgb(22, 132, 151);
+  background: lightslategray;
 }
 
 .navicon {
