--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: rgb(22, 132, 151);
+  background-color: lightslategray;
   font: 100% Roboto, sans-serif;
   margin: 0;
   padding: 0;
