--- a/src/styles/HamburgerMenu.module.css
+++ b/src/styles/HamburgerMenu.module.css
@@ -20,6 +20,7 @@
 }
 
 .nav a {
+  font-size: 1.2rem;
   text-decoration: none;
   display: block;
   line-height: 50px;
@@ -30,7 +31,6 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  text-transform: uppercase;
 }
 
 .nav a:hover {
