--- a/src/styles/Image.module.css
+++ b/src/styles/Image.module.css
@@ -1,8 +1,11 @@
 .images{
   display: flex;
+  justify-content: center;
+  padding: 25px;
 }
 
 
 .images img{
   height: 250px;
+  padding: 5px;
 }
