--- a/src/styles/PageTitle.module.css
+++ b/src/styles/PageTitle.module.css
@@ -1,16 +1,16 @@
-.div{
+.outerDiv{
   text-align: center;
+  background-color: green;
 }
 
-.div h1 {
+.outerDiv h1 {
   display: inline-block;
   padding: 15px;
   text-transform: uppercase;
+  font-style: 'Colombo-sans';
   font-size: 50px;
   font-weight: 500;
   color: white;
-  border: 7px solid white;
-  border-radius: 5px;
   opacity: 0;
 }
 
