--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -1,6 +1,13 @@
-.background{
-  background-color: aqua;
-  position: center;
-  width: 100px;
-  height: 100px;
+.trueHeader {
+  display: flex;
+  transform: translateY(+10%);
+  background-color: #e4ecec;
+  height: 100%;
+}
+
+.headerTitle {
+  color: #737373;
+  margin-left: auto;
+  padding-right: 15px;
+  font-weight: 700;
 }
