--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -2,24 +2,25 @@
   display: flex;
   background-color: #e4ecec;
   width: 100%;
-  border-top: 2px solid #bdbdbd;
-  border-bottom: 2px solid #bdbdbd;
-  margin-top: 20px;
   margin-bottom: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15),
+    0px 4px 8px rgba(0, 0, 0, 0.15),
+    0px 8px 16px rgba(0, 0, 0, 0.15),
+    0px 16px 32px rgba(0, 0, 0, 0.15);
 }
 
-.sticky{
+.sticky {
   position: fixed;
   z-index: 9999;
 }
 
-.websiteTitle{
+.websiteTitle {
   margin-left: auto;
   padding-right: 15px;
 }
 
 .navBar a,
-.websiteTitle{
+.websiteTitle {
   font-weight: 700;
   color: #737373;
   text-decoration: none;
@@ -31,7 +32,8 @@
   display: grid;
   grid-auto-flow: column;
   grid-column-gap: 20px;
-  position: relative; /* add position:relative to parent container */
+  position: relative;
+  /* add position:relative to parent container */
 }
 
 .navBar a::after {
@@ -45,10 +47,11 @@
   left: 50%;
   transform: translateX(-50%);
   opacity: 0;
-  transition: all 0.3s ease; /* add transition effect for smooth animation */
+  transition: all 0.3s ease;
+  /* add transition effect for smooth animation */
 }
 
-.navBar a:hover{
+.navBar a:hover {
   color: #b4b4b4;
 }
 
