--- a/src/styles/Index.module.css
+++ b/src/styles/Index.module.css
@@ -2,20 +2,75 @@
   display: flex;
 }
 
-.title{
+.container {
   width: 50%;
-  align-items: center;
 }
 
-.title h1{
+.container h1 {
   text-align: center;
+  font-weight: 900;
+  font-size: 50px;
 }
 
-.title p{
-  margin-left: auto;
+.container p {
   padding: 10px;
+  font-size: 20px;
+  margin-bottom: 40px;
 }
 
-.title button{
-
+.button {
+  display: block;
+  margin: auto;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  text-decoration: none;
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  padding: 12px 16px;
+  color: #3586ff;
+  border: 3px solid #3586ff;
+  border-radius: calc(12px + 8px + 4px);
+  transition: 4s;
+  background: none;
 }
+
+.button:before,
+.button:after {
+  content: "";
+  position: absolute;
+  top: -24px;
+  z-index: -1;
+  width: 200%;
+  aspect-ratio: 1;
+  border: none;
+  border-radius: 40%;
+  background-color: #3586ff;
+  transition: 4s;
+}
+
+.button:before {
+  left: -80%;
+  transform: translate3d(0, 5em, 0) rotate(-340deg);
+}
+
+.button:after {
+  right: -80%;
+  transform: translate3d(0, 5em, 0) rotate(390deg);
+}
+
+.button:hover,
+.button:focus {
+  cursor: pointer;
+  color: white;
+}
+
+.button:hover:before,
+.button:hover:after,
+.button:focus:before,
+.button:focus:after {
+  transform: none;
+  background-color: #3586ff;
+}
+
