--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  background-color: #e4ecec;
+  background-color: white;
   width: 100%;
   margin-bottom: 20px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15),
@@ -21,8 +21,8 @@
 
 .navBar a,
 .websiteTitle {
-  font-weight: 700;
-  color: #737373;
+  font-weight: 800;
+  color: black;
   text-decoration: none;
   position: relative;
 }
@@ -33,7 +33,6 @@
   grid-auto-flow: column;
   grid-column-gap: 20px;
   position: relative;
-  /* add position:relative to parent container */
 }
 
 .navBar a::after {
@@ -48,7 +47,6 @@
   transform: translateX(-50%);
   opacity: 0;
   transition: all 0.3s ease;
-  /* add transition effect for smooth animation */
 }
 
 .navBar a:hover {
