--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: #e4ecec;
+  background-color: white;
   font: 100% Roboto, sans-serif;
   margin: 0;
   padding: 0;
