--- a/src/styles/Index.module.css
+++ b/src/styles/Index.module.css
@@ -2,6 +2,12 @@
   display: flex;
 }
 
+.divider{
+  margin: 15px;
+  border: 2px solid lightgray;
+  border-radius: 5px;
+}
+
 .container {
   width: 50%;
 }
@@ -15,7 +21,7 @@
 .container p {
   padding: 10px;
   font-size: 20px;
-  margin-bottom: 40px;
+  margin: 10px 30px 40px 30px;
 }
 
 .button {
