--- a/src/styles/PageTitle.module.css
+++ b/src/styles/PageTitle.module.css
@@ -1,28 +1,11 @@
-.outerDiv{
+.outerDiv {
   text-align: center;
-  background-color: #6c9cac;
-  border-top: 3px solid #bdbdbd;
-  border-bottom: 3px solid #bdbdbd;
 }
 
 .outerDiv h1 {
-  display: inline-block;
   padding: 15px;
   text-transform: uppercase;
-  font-style: 'Colombo-sans';
   font-size: 50px;
-  font-weight: 500;
-  color: beige;
-  opacity: 0;
+  color: black;
   font-weight: 700;
-}
-
-.h1.fade-in{
-  opacity: 1;
-  transition: opacity 1.5s ease-in-out;
-}
-
-.h1.fade-out{
-  opacity: 0;
-  transition: opacity 1.5s ease-out-in;
 }
