--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,6 +1,7 @@
 .footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
+  left: 0;
   width: 100%;
   background-color: #3586FF;
   min-height: 100px;
