--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,24 @@
 html,
 body {
   background-color: white;
-  font: 100% Roboto, sans-serif;
   margin: 0;
   padding: 0;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+  z-index: 9999;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
 
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
 
+*::-webkit-scrollbar-thumb {
+  background-color: lightgray;
+  border-radius: 12px;
+  border: 3px solid #ffffff;
+}
