--- a/src/styles/Index.module.css
+++ b/src/styles/Index.module.css
@@ -1,5 +1,6 @@
 .content {
   display: flex;
+  margin-top: 60px;
 }
 
 .divider{
@@ -80,3 +81,26 @@
   background-color: #3586ff;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-dialog {
+  width: 500px;
+}
+
+.modal-content {
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 20px;
+}
