--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -27,3 +27,62 @@
   font-weight: bold;
   cursor: pointer;
 }
+
+.form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form input{
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid black;
+  /** Changes nothing*/
+  outline: 0;
+  font-size: 1.3rem;
+  /**color: #fff*/
+  padding: 7px 0;
+  /** Changes nothing */
+  background: transparent;
+  transition: border-color 0.2s;
+}
+
+
+.form input::placeholder{
+  color: transparent;
+}
+
+
+.form label{
+  /**
+  This is what breaks it
+  position: absolute;
+  */
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #9b9b9b;
+}
+
+.form input:focus {
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, #11998e, #38ef7d);
+  border-image-slice: 1;
+}
+
+.form input:focus ~ .form label{
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #11997e;
+}
+
+.form input:required, .form label:invalid {
+  box-shadow: none;
+}
