--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -15,7 +15,7 @@
 
 .websiteTitle {
   margin-left: auto;
-  padding-right: 15px;
+  padding: 15px 15px 0 0;
 }
 
 .navBar a,
@@ -27,7 +27,7 @@
 }
 
 .navBar {
-  padding: 15px 15px 5px;
+  padding: 15px;
   display: grid;
   grid-auto-flow: column;
   grid-column-gap: 20px;
