Updated HTML to message to end user

--- a/templates/email.html
+++ b/templates/email.html
@@ -107,8 +107,9 @@
                               font-size: 16px;
                               line-height: 25px;
                               color: #232323;
+                              text-align: center;
                             " class="padding message-content">
-                          <h2>New Contact Message</h2>
+                          <h2>New Appointment Request</h2>
                           <div class="form-container">${htmlData}</div>
                         </td>
                       </tr>
