--- a/src/styles/ImageCarousel.module.css
+++ b/src/styles/ImageCarousel.module.css
@@ -1,8 +1,11 @@
 .container{
-  width: 50%;
+  width: 90%;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .image img{
-  height: 500px;
+  max-width: 100%;
+  height: auto;
   margin: 0 auto;
 }
