--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,3 +1,4 @@
+/* Default styles for all screen sizes */
 .header {
   display: flex;
   background-color: white;
@@ -56,4 +57,29 @@
 .navBar a.active::after {
   width: 100%;
   opacity: 1;
+}
+
+/* Styles for screens smaller than 768px (mobile) */
+@media (max-width: 767px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .websiteTitle {
+    margin-left: 0;
+    padding: 15px 0;
+  }
+
+  .navBar {
+    grid-auto-flow: row;
+    grid-row-gap: 10px;
+  }
+}
+
+/* Styles for screens larger than 768px (laptops) */
+@media (min-width: 768px) {
+  .navBar {
+    justify-self: end;
+  }
 }
