--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -7,6 +7,7 @@
     0px 4px 8px rgba(0, 0, 0, 0.15),
     0px 8px 16px rgba(0, 0, 0, 0.15),
     0px 16px 32px rgba(0, 0, 0, 0.15);
+  border-radius: 0 0 20px 20px;
 }
 
 .sticky {
