--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,14 +1,12 @@
 .footer {
-  position: relative;
-  bottom: 0;
   left: 0;
   width: 100%;
   background-color: #3586FF;
   min-height: 100px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
 }
 
 .footer p{
@@ -57,9 +55,14 @@
   opacity: 1;
 }
 
+.waveContainer{
+  overflow: visible;
+  position: relative;
+  bottom: 100px;
+}
+
 .wave {
   position: absolute;
-  top: -100px;
   left: 0;
   width: 100%;
   height: 100px;
@@ -68,31 +71,27 @@
 }
 
 .wave1 {
-  z-index: 1000;
   opacity: 1;
-  bottom: 0;
   animation: animateWaves 4s linear infinite;
+  z-index: 4;
 }
 
 .wave2 {
-  z-index: 999;
   opacity: 0.5;
-  bottom: 10px;
   animation: animate 4s linear infinite !important;
+  z-index: 3;
 }
 
 .wave3 {
-  z-index: 1000;
   opacity: 0.2;
-  bottom: 15px;
   animation: animateWaves 3s linear infinite;
+  z-index: 2;
 }
 
 .wave4 {
-  z-index: 999;
   opacity: 0.7;
-  bottom: 20px;
   animation: animate 3s linear infinite;
+  z-index: 1;
 }
 
 @keyframes animateWaves {
