--- a/src/styles/Index.module.css
+++ b/src/styles/Index.module.css
@@ -14,9 +14,17 @@
 }
 
 .container p {
+  color: gray;
   padding: 10px;
-  font-size: 20px;
+  font-size: 25px;
   margin: 10px 30px 40px 30px;
+  font-weight: 700;
+  border: 2px solid rgb(189, 189, 189);
+  border-radius: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15),
+    0px 4px 8px rgba(0, 0, 0, 0.15),
+    0px 8px 16px rgba(0, 0, 0, 0.15),
+    0px 16px 32px rgba(0, 0, 0, 0.15);
 }
 
 .overlay {
@@ -42,6 +50,8 @@
   border-radius: 5px;
   padding: 20px;
 }
+
+
 
 /* Stack elements on mobile */
 @media only screen and (max-width: 768px) {
