--- a/src/styles/Page Styles/About.module.css
+++ b/src/styles/Page Styles/About.module.css
@@ -38,14 +38,18 @@
   }
 
   .container p {
-    font-size: 20px;
+    font-size: 15px;
     margin: 20px 0 20px 0;
     width: 75vw;
   }
 }
 
 @media only screen and (max-width: 320px) {
+  .lilyImage{
+    height: 50vh;
+  }
+
   .container p {
-    font-size: 15px;
+    font-size: 13px;
   }
 }
