--- a/src/styles/Page Styles/About.module.css
+++ b/src/styles/Page Styles/About.module.css
@@ -6,8 +6,12 @@
 }
 
 .lilyImage {
-  height: 75vh;
+  height: 60vh;
   border-radius: 20px;
+  box-shadow: 0px 2px 4px #3586FF,
+    0px 4px 8px #3586FF,
+    0px 8px 16px #3586FF,
+    0px 16px 32px #3586FF;
 }
 
 .container p {
@@ -21,13 +25,17 @@
 
 @media only screen and (max-width: 1024px) {
   .container p {
-    font-size: 30px;
+    font-size: 25px;
   }
 }
 
 @media only screen and (max-width: 768px) {
+  .container{
+    flex-direction: column;
+  }
+
   .container p {
-    font-size: 25px;
+    font-size: 20px;
   }
 }
 
@@ -42,11 +50,15 @@
     margin: 20px 0 20px 0;
     width: 75vw;
   }
+
+  .lilyImage{
+    height: 45vh;
+  }
 }
 
 @media only screen and (max-width: 320px) {
   .lilyImage{
-    height: 50vh;
+    height: 40vh;
   }
 
   .container p {
