--- a/src/styles/Component Styles/NavBar.module.css
+++ b/src/styles/Component Styles/NavBar.module.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  background-color: white;
+  background-color: black;
   width: 100%;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15),
     0px 4px 8px rgba(0, 0, 0, 0.15),
