--- a/src/styles/Page Styles/Index.module.css
+++ b/src/styles/Page Styles/Index.module.css
@@ -44,7 +44,7 @@
 }
 
 .modal-content {
-  background-color: white;
+  background-color: black;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   padding: 20px;
