--- a/src/styles/Component Styles/PageTitle.module.css
+++ b/src/styles/Component Styles/PageTitle.module.css
@@ -6,6 +6,7 @@
   padding: 15px;
   text-transform: uppercase;
   font-size: 50px;
-  color: black;
+  color: white;
+  background-color: black;
   font-weight: 700;
 }
