--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 html,
 body {
   background-color: black;
+  color: white;
   margin: 0;
   padding: 0;
 }
@@ -18,7 +19,7 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: lightgray;
+  /* background-color: lightgray; */
   border-radius: 12px;
   border: 3px solid #ffffff;
 }
