--- a/src/styles/Component Styles/NavBar.module.css
+++ b/src/styles/Component Styles/NavBar.module.css
@@ -13,7 +13,12 @@
   flex-direction: column;
 }
 
-
+.contactSection {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+}
 
 .contactName {
   font-weight: bold;
