removed translations and added to the top bar

--- a/src/styles/Component Styles/ImageCarousel.module.css
+++ b/src/styles/Component Styles/ImageCarousel.module.css
@@ -1,10 +1,10 @@
 .container{
-  width: 90%;
-  max-width: 600px;
+  width: 100%;
+  max-width: 500px;
   margin: 0 auto;
 }
 
-.image img{
+.image{
   max-width: 80%;
   height: auto;
   margin: 0 auto;
