--- a/src/styles/Component Styles/ServicesCarousel.module.css
+++ b/src/styles/Component Styles/ServicesCarousel.module.css
@@ -1,12 +1,16 @@
 .container{
-    width: 90%;
-    max-width: 500px;
-    max-height: 500px;
-    margin: 0 auto;
-  }
-  
-  .image img{
-    max-width: 80%;
-    height: auto;
-    margin: 0 auto;
-  }
+  width: 90%;
+  max-width: 600px;
+  margin: 0 auto;
+  align-items: center;
+}
+
+.image{
+  vertical-align: middle;
+}
+
+.image img{
+  max-width: 80%;
+  height: auto;
+  margin: 0 auto;
+}
