--- a/src/styles/Component Styles/NavBar.module.css
+++ b/src/styles/Component Styles/NavBar.module.css
@@ -1,23 +1,21 @@
 .header {
   display: flex;
-  background-color: black;
-  color: white;
   width: 100%;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15),
-              0px 4px 8px rgba(0, 0, 0, 0.15),
-              0px 8px 16px rgba(0, 0, 0, 0.15),
-              0px 16px 32px rgba(0, 0, 0, 0.15);
   justify-content: space-between;
-  align-items: center;
+  align-items:flex-end;
   padding: 10px 20px;
   flex-direction: column;
 }
 
+.desktopMenu{
+margin: auto 0;
+}
+
 .contactSection {
-  display: flex;
+  display: inline-block;
   align-items: center;
   gap: 20px;
-  width: 100%;
+  margin-left: auto;
 }
 
 .contactName {
@@ -124,6 +122,19 @@
   padding: 15px 15px 0 0;
 }
 
+.mobileMenu{
+  display: none;
+}
+
+.logo{
+  width: 20%;
+  max-width: 300px;
+  height: auto;
+  margin-right: auto;
+}
+
+
+
 /* Contact Section (Mobile Center Alignment) */
 @media (max-width: 767px) {
   .contactSection {
@@ -140,7 +151,8 @@
   }
 
    .navBar {
-    flex-direction: column; 
+    flex-direction: row; 
+    align-items: center;
   }
  
   .websiteTitle {
@@ -148,38 +160,60 @@
   }
 
 .logo{
-  width: 200px;
+  width: 175px;
   margin-right: auto;
 }
 
-  .hamburgerMenu {
-    display: flex;
-    width: 10%;
-    cursor: pointer;
-    color: white;
-    font-size: 24px;
-    margin-left: auto;
-    padding: 10px;
-  }
+.mobileMenu{
+  display: inline;
+  width: 10%;
+  height: 10%;
+}
 
-  .navLinks {
-    display: none; /* Hide links by default */
-    flex-direction: column; /* Stack links vertically */
-    gap: 10px;
-    margin-top: 15px;
-    text-align: center;
-  }
+.hamburgerMenu {
+  cursor: pointer;
+  color: white;
+  width: 10%;
+  display: inline; 
+}
 
-  .navLinks.showMenu {
-    display: flex; /* Show links when the menu is open */
+.mobileNavLinks {
+ display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 150px; /* Adjust to position below the navbar */
+  left: 0;
+  right: 0;
+  background-color: #2e2e2e;
+  padding: 10px 0;
+  z-index: 1000;
+  opacity: 0;
+  width: 70%;
+  align-items: center;
+  margin: 0 auto;
+  border-radius: 10px; /* Adds rounded corners */
+  /* box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); Optional: Adds a subtle shadow */
+  transform: translateY(0px);
+  transition:  opacity 0.3s ease; /* Smooth transition */
+}
 
-  }
+.mobileNavLinks.showMobileMenu {
+  display: flex; /* Show links when menu is open */
+  opacity: 1;
+  transform: translateY(0);
+}
 
-  .navLinks a {
-    font-size: 18px; /* Adjust link size */
-    font-weight: 600;
-    text-decoration: none;
-    color: white;
+.mobileNavLinks a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 18px;
+  margin: 10px 0;
+  text-align: center;
+}
+
+  .desktopMenu{
+    display: none;
   }
 }
 
