--- a/src/styles/Component Styles/BackToTop.module.css
+++ b/src/styles/Component Styles/BackToTop.module.css
@@ -5,19 +5,26 @@
     background-color: #333; /* Dark background */
     border: none;
     border-radius: 50%;
-    width: 25px;
-    height: 25px;
-    display: flex;
+    width: 35px;
+    height: 35px;
+    display: inline;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
     z-index: 1000;
+    color: white;
   }
   
   .backToTopButton:hover {
     background-color: #555; /* Slightly lighter on hover */
     transform: scale(1.5); /* Subtle scaling */
   }
-  
+
+  .icon{
+    width: 20px;
+    display: flex;
+    margin: auto;
+  }
+ 
