--- a/src/styles/Component Styles/FlowButton.module.css
+++ b/src/styles/Component Styles/FlowButton.module.css
@@ -9,7 +9,8 @@
   font-weight: 600;
   font-size: 20px;
   padding: 12px 16px;
-  color: #F5C501; /* Yellow text on initial black background */
+  color: #F5C501;
+  /* Yellow text on initial black background */
   border: 3px solid #F5C501;
   border-radius: calc(12px + 8px + 4px);
 }
@@ -24,7 +25,8 @@
   aspect-ratio: 1;
   border: none;
   border-radius: 40%;
-  background-color: #F5C501; /* Yellow background for hover effect */
+  background-color: #F5C501;
+  /* Yellow background for hover effect */
   transition: transform 0.5s ease, background-color 0.5s ease;
 }
 
@@ -41,14 +43,17 @@
 .button:hover,
 .button:focus {
   cursor: pointer;
-  color: black; /* Black text on yellow background */
-  background-color: #F5C501; /* Yellow background on hover */
+  color: black;
+  /* Black text on yellow background */
+  background-color: #F5C501;
+  /* Yellow background on hover */
 }
 
 .button:hover:before,
 .button:hover:after,
 .button:focus:before,
 .button:focus:after {
-  transform: translate3d(0, 0, 0) rotate(0deg); /* Reset to show the yellow hover effect */
+  transform: translate3d(0, 0, 0) rotate(0deg);
+  /* Reset to show the yellow hover effect */
   background-color: #F5C501;
 }
